css/custom.css
@charset "utf-8";
/* CSS Document */

/* Fonts */
@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@800&display=swap');

body {
  font-family: 'Inter', sans-serif !important;
}

.jumbotron-heading {
  font-weight: 900;
  font-size: 32pt;
}

.Jumbotron-sub-heading {
  font-weight: 200;
  color: whitesmoke;
  font-size: 14pt;
}

.section-heading {
  font-weight: 600;
}

.card-title {
  font-weight: 600;
}

@font-face {
  font-family: 'Neuropolitical';
  src: url('Neuro.woff');
  src: url('Neuro.woff2');
}

.logo {
  font-family: 'Neuropolitical'!important;
}

.inherit-style {
  color: inherit;
  text-decoration: inherit;
}

 .inherit-style:active {
  color: inherit;
}

/* Cards */

.card-rounded {
  border-radius: 1rem;
  overflow: hidden;
}

.card-article {
  background-color: whitesmoke;
  border-radius: 1rem;
  overflow: hidden;
}

.card-custom-img {
  background-position: center;
}

.bg-image {
  background-position: center;
}


/* Buttons */

.btn-warning {
  background-color: #FD7E14;
}
.btn-warning:hover {
  background-color: #ff9239;
}

/* blockquote */

.blockquote {
  font-style: italic;
  font-weight: 500;
  margin: 0.25em 0;
  padding: 0.35em 40px;
  line-height: 1.45;
  position: relative;
  color: white;
  }
  
  .blockquote:before {
  font-style: normal;
  font-family: 'Manrope', sans-serif;  display: block;
  padding-left: 10px;
  content: "\201C";
  font-size: 80px;
  position: absolute;
  left: -20px;
  top: -30px;
  color: #fff;
  /* color:  #FD7E14; */
  }
  
  .blockquote-cite {
  color: #999999;
  font-size: 14px;
  display: block;
  margin-top: 5px;
  }
   
  .blockquote-cite:before {
  content: "\2014 \2009";
  }

/* slant */

.topslant-container {
  clip-path: polygon(
    0 0,
    100% calc(6vw),
    100% 100%,
    0 100%
  );
background-color: #fff;
height: 100px;
transform: translateY(2px);
}

.bottomslant-container {
    clip-path: polygon(
      0 0,
      100% 0,
      100% 100%,
      0 calc(100% - 6vw)
    );
  background-color: #fff;
  height: 100px;
  transform: translateY(-2px);
  }

  .absolute-bottom{
    bottom: 0;
    z-index: 3;

  }.absolute-top{
    top: 0;
    z-index: 3;
  }

.slant-container {
  padding-top: 5%;
  padding-bottom: 5%;
  transform: skewY(3.33deg);
  position: relative;
  width: 100%;
  margin-top: -3%;
  margin-bottom: -3%;
}

.unslant-content {
  transform: skewY(-3.33deg);
}

.vertical-center {
  min-height: 100%;
  display: flex;
  align-items: center;
}
.mt-15 {
  margin-top: 15%;
}

/* sections */

.vh-50 {
  min-height: 50.1vh;
}
.vh-5 {
  min-height: 5.1vh;
}
.vh-15 {
  min-height: 15.1vh;
}
.vh-25 {
  min-height: 25.1vh;
}
.vh-33 {
  min-height: 33.33vh;
}
.vh-75 {
  min-height: 75.1vh;
}
.vh-115 {
  min-height: 115.1vh;
}
.vh-125 {
  min-height: 125.1vh;
}

.three-features {
    height: 750px;
}

.services {
  background-color: #fff;
}

.landing-head {
  background: url('../img/LandingPage_Pos.png') 50% 0% no-repeat;
	background-size: cover;
  color: white;
  padding-bottom: 25%;
}

.landing-head-content{
  display: inline-block;
      align-self: center;
     -webkit-align-self: center;
     -ms-flex-item-align: center;
}

@media (max-width : 767px ){
	.landing-head{
    text-align: center !important;
    background: url('../img/LandingPage_Mobile.png');
    background-position: top;
    background-size: cover;
  }

  .Jumbotron-sub-heading{
    font-weight: 400;
  }
  .card-body {
    text-align: center;
  }
  .navbar {
    background-color: white;
  }
  .nav-link {
    color: #4f4f4f !important;
  }
  .fa-bars{
    color: #4f4f4f !important;
  }
  .logo {
    color: #0054A6 !important;
  }
}

.quote {
  background-color: #0054A6;
}

.pos-btm-article {
  background-image: url('../img/AbstractWhiteBg.jpeg');
  background-size: cover;
  overflow: visible;
}

.pos-features {
  font-size: large;
  color: #0054A6;
}


.payments-head {
  background-image: url('../img/Payments_Page.png');
  background-size: cover;
  min-height: 50%;
}

.loans-head {
  background-image: url('../img/Loan_Page.png');
  background-size: cover;
  min-height: 50%;
}
.pos-head {
  background-image: url('../img/POS_Page.png');
  background-size: cover;
  min-height: 50%;
}

.footer {
  background-color: rgb(34, 34, 34);
}

.customers {
  background-color: rgb(204, 204, 204);
}
.customer-logo {
  filter: opacity(60%);
}

.about {
  padding-top: 5%;
}

.customerinfoform {
  background-color: #0054A6;
}

/* Featurett Divider */

 .featurette-divider {
  margin: 80px 0; /* <hr> between each */
}

/* Nav Bar */

.navbar {
    border-bottom: solid;
    border-bottom-width: 1px;
    border-bottom-color: rgba(187, 188, 255, 0.096);
    /* backdrop-filter: blur(4px); */
}
.logo {
  color: white;
}

:hover.navbar-brand {
  color: whitesmoke;
}
.navbar-scrolled .logo {
  color: #0054A6 !important;
}

 /* space */

 .space {
   height: 7.5%;
 }

 /* animation */

 .fade-in-section {
  opacity: 0;
  transform: translateY(20vh);
  visibility: hidden;
  transition: opacity 0.6s ease-out, transform 1.2s ease-out;
  will-change: opacity, visibility;
}
.fade-in-section.is-visible {
  opacity: 1;
  transform: none;
  visibility: visible;
}

